--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -766,7 +766,7 @@ en:
       table_of_contents:
         getting_started: "Getting started"
       getting_started:
-        paragraph_1: "It is super easy to get started with CloudWalk! Follow the steps below and you should have a simple POS application running on an emulator, communicating with our sample endpoint."
+        paragraph_1: "It is super easy to get started with CloudWalk! Follow the steps below and you should have a simple POS application running on POS terminal, communicating with our sample endpoint."
         h3_1: "1. Create a free account"
         paragraph_2: "First, you will need to create a free CloudWalk account, which will let you use all the components of the platform:"
         paragraph_3: "<a href='https://manager.cloudwalk.io/users/sign_up' class='external'>https://manager.cloudwalk.io/users/sign_up</a>"
@@ -777,19 +777,21 @@ en:
         form:
           application_type_lbl: "Application type"
           application_type_val: "Standard app"
-          application_name_lbl: "Application name"
+          application_name_lbl: "Name"
           application_name_val: "helloworld"
           description_lbl: "Description"
           description_val: "A simple echo application"
+          format_lbl: "Format"
+          format_val: "HTTP"
           label_lbl: "Label"
           label_val: "HELLO WORLD"
           endpoint_lbl: "  Endpoint"
           endpoint_val: "http://http-echo.cloudwalk.io"
         h3_3: "3. Add the source code"
         paragraph_7: "Now that you have created your POSXML application, click on the button <strong>Edit source code</strong>, which will bring up the CloudWalk online IDE, where you can copy and paste the following POSXML code:"
-        h3_4: "4. Emulate!"
-        paragraph_8: "The last step is to emulate the sample application on the emulator. Click the <strong>Emulate</strong> button, followed by the <strong>Power</strong> button and be impressed!"
-        paragraph_9: "Note that the application is just sending a sequence of numbers (variable <span class='code'>sBufSend</span>), and our test server is prepending the string <strong>CLOUDWALK</strong> onto it."
+        h3_4: "4. Deploy the application"
+        paragraph_8: "Click the <strong>Deploy</strong> button in order to deploy the application."
+        paragraph_9: "The next step is the POS setup, which should enable it to download the application:"
     authorizer:
       description: Component responsible to validate the information provided by POS terminals.
       overview:
