--- a/config/locales/pt-br.yml
+++ b/config/locales/pt-br.yml
@@ -884,6 +884,7 @@ pt-BR:
         transactions: Transações
         push_notifications: Notificações push
         parameters: Parâmetros
+        metacontents: Metaconteúdos
         users: Usuários
     ide:
       group_name: CloudWalk IDE
