--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -364,6 +364,7 @@ en:
           transaction_type: record type
         parsed_data:
           paragraph_1: "Financial transactions generally use specific protocols such as ISO8583 or ISO20022. To simplify analysis, the data is parsed into the column <strong>parsed</strong>, as shown below:"
+          paragraph_2: "Only successfully completed transactions are parsed (status = success)"
         table_of_contents:
           attributes: Transaction attributes
           index: List of all transactions
