--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2410,7 +2410,7 @@ en:
       models:
         list: "Supported models: "
         verix: "Vx 510, Vx 610 and Vx 670"
-        evo_usb: "VX 520 and VX 680"
+        evo_usb: "e265, VX 520, VX 675, VX 680, VX 685 and VX 690"
         evo_serial: "VX 805 and VX 820"
         telium_1: "EFT930G and EFT930S"
         telium_2: "ICT220, ICT250, IWL220, IWL250 and IWL280"
@@ -2922,7 +2922,7 @@ en:
     verifone_evo_vx805:
       description: Step by step process of installing the CloudWalk Framework for Verifone VX 805.
     verifone_evo:
-      description: Step by step process of installing the CloudWalk Framework for Verifone VX 520 and VX 680.
+      description: Step by step process of installing the CloudWalk Framework for Verifone e265, VX 520, VX 675, VX 680, VX 685 and VX 690.
       identify_os:
         os_version: Operating System Version
         eos_version: Extended Operating System Version
@@ -2932,8 +2932,8 @@ en:
         pos_model: Model POS
       installing_vx805_and_vx820: To load the framework on terminals <strong>VX 805</strong> and <strong>VX 820</strong>, check out <a href='/en/framework/verifone-evo-vx805'>this guide</a>.
       installing_vx805_and_vx820_intro: This guide will walk you through the process of installing the CloudWalk Framework on terminals Verifone <strong>VX 805</strong> and <strong>VX 820</strong>. Be aware of the prerequisites and follow the installation process carefully.
-      introduction: This guide will walk you through the process of installing the CloudWalk Framework on terminals Verifone <strong>VX 520</strong> and <strong>VX 680</strong>. Be aware of the prerequisites and follow the installation process carefully.
-      introduction_cable_terminals: This guide will walk you through the process of installing the CloudWalk Framework on terminals Verifone VX 805 and VX 820. Be aware of the prerequisites and follow the installation process carefully.
+      introduction: This guide will walk you through the process of installing the CloudWalk Framework on terminals Verifone <strong>e265</strong>, <strong>VX 520</strong>, <strong>VX 675</strong>, <strong>VX 680</strong>, <strong>VX 685</strong> and <strong>VX 690</strong>. Be aware of the prerequisites and follow the installation process carefully.
+      introduction_cable_terminals: This guide will walk you through the process of installing the CloudWalk Framework on terminals Verifone <strong>VX 805</strong> and <strong>VX 820</strong>. Be aware of the prerequisites and follow the installation process carefully.
       loading_the_framework:
         paragraph_1: To start charging, run <strong>carrega_na_flash.bat</strong> to load the certificates and the CloudWalk Framework.
         paragraph_2: 'The following DOS screen will appear:'
