--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2374,11 +2374,14 @@ en:
       introduction: "Optimize your time and take advantage of ready to use POSXML functions."
       paragraph_1: "Do you like to share? <a href='mailto:posxml@cloudwalk.io'>Send us your function</a>, and if we publish it, we will mention you as the author!"
       table_of_contents:
+        dynamic_menu: "Dynamic menu"
         cnpj_validation: "CNPJ validation"
         cpf_validation: "CPF validation"
         hide_credit_card_number: "Hide the credit card number entered"
         center_text: "Center text"
         format_iso8583_money: "Format ISO8583 money"
+      dynamic_menu:
+        paragraph_1: "Function to create a dynamic menu, allowing the cursor to be moved up and down in a list of items."
       cnpj_validation:
         paragraph_1: "Function to validate a given CNPJ."
       cpf_validation:
